# OpenVault

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Dockerfile  MASTER_HANDOFF.md  Makefile  PART10_DRAFT_full_path_profiler_and_kernel_acceleration.md  PROJECT_DESCRIPTION.md  README.md  delivery_guide.md  docker-compose.yml  implementation_plan.md  pyproject.toml  task.md
.cursor/skills/claude-cursor-gatekeeper/: SKILL.md
.github/workflows/: ci.yml
OpenMW/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
OpenMW/docs/research/: PART1_findings.md  PART2_findings.md  PART3_findings.md  PART4_findings.md  PART5_findings.md  PART8_findings.md
OpenMW/openmw/: __init__.py  cli.py  device_profile.py  key_channel_quant.py  kv_quant.py  model_manager.py  model_router.py  prefetch_flash.py  prefetch_heuristic.py  prefetch_naive.py  prefetch_sparsity.py  run.py  training_config.py  unsloth_bridge.py  windows_ioring_spike.py
OpenMW/openmw/config/: __init__.py  lmcache_disk.yaml
OpenMW/openmw/data/: models.json
OpenMW/scripts/: run_offload_demo.sh
OpenMW/tests/: test_chaos_stress.py  test_cli.py  test_device_profile.py  test_key_channel_quant.py  test_kv_quant.py  test_model_manager.py  test_model_router.py  test_prefetch_flash.py  test_prefetch_sparsity.py  test_run.py  test_unsloth_bridge.py
Profiler/: README.md  capability_manifest.json  pyproject.toml
Profiler/Profiler/: path_trace_report.html
Profiler/nvme_profiler/: __init__.py  cli.py  fuse.py  nsys.py  path_trace.py  probe.py  report.py  schema.py
Profiler/tests/unit/: test_path_trace.py  test_probe.py
docs/: VISION.md  architecture.puml  design-decisions.md  evidence-aidaptiv-comparison.md  external-test-bench.md  pcb-probe-concept.md  real-hardware-test-matrix.md  setup.md  vm-host-proxy.md
nvme_sentinel/: __init__.py  cli.py  cli_nas.py
nvme_sentinel/adapters/: __init__.py  _linux_native.py  _nvme_cli.py  _windows_native.py  _wmi_fallback.py  host_proxy.py  linux.py  mock.py  windows.py
nvme_sentinel/bench/: __init__.py  report.py  run.py  schema.py
nvme_sentinel/commands/: __init__.py  identify.py  log_pages.py
nvme_sentinel/hal/: __init__.py  base.py  enums.py  exceptions.py  factory.py  interface.py
nvme_sentinel/inventory/: __init__.py  discovery.py  linux.py  models.py  windows.py
nvme_sentinel/models/: __init__.py  error_log.py  firmware.py  identify.py  smart.py
nvme_sentinel/remote/: __init__.py  unraid.py
nvme_sentinel/reporting/: __init__.py  report.py
nvme_sentinel/snapshot/: __init__.py  collect.py  schema.py
nvme_sentinel/stress/: __init__.py  diskspd.py  fio.py  parser.py  profiles.py
nvme_sentinel/telemetry/: __init__.py  read.py  source.py
scripts/: build_bench_report.py  build_fixtures.py  copy_cursor_chat.py  demo.ps1  demo.sh  real_device_test.py  run_linux_tests.ps1
tests/: conftest.py  test_bootstrap.py
tests/fixtures/: diskspd_output_sample.xml  fio_output_sample.json
tests/integration/: test_adapter_roundtrip.py  test_smoke_integration.py
tests/unit/: test_bench_run.py  test_cli.py  test_collect_snapshot.py  test_commands_identify.py  test_commands_log_pages.py  test_diskspd_parser.py  test_factory.py  test_fio_parser.py  test_hal_base.py  test_host_proxy.py  test_inventory.py  test_linux_adapter.py  test_mock_adapter.py  test_smart_model.py  test_smart_properties.py  test_telemetry_read.py  test_unraid.py  test_windows_adapter.py  test_wmi_fallback.py
