[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmw"
version = "0.1.0"
description = "Open measurement workspace: flash KV-cache offload + profiler correlation."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "nvme-sentinel",
  "nvme-profiler",
  "pydantic>=2.5",
  "structlog>=24.1",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "mypy>=1.10",
  "ruff>=0.6",
]

[tool.uv.sources]
nvme-sentinel = { path = "..", editable = true }
nvme-profiler = { path = "../Profiler", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["openmw"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["nvme_sentinel.*", "nvme_profiler.*"]
ignore_missing_imports = true
